# Monocular-Depth-Estimation_Monodepth2_KITTI

./: .gitignore  Dockerfile  README.md  README_ZN.md  environment.yml  pyproject.toml
config/: config_mindspore.yaml  config_pytorch.yaml  config_tensorflow.yaml
data/: README.md
docs/: monodepth2_kitti_technical_report.md
models/: __init__.py  monodepth2_mindspore.py  monodepth2_pytorch.py  monodepth2_tf.py
src/: data_preparation.py  datasets.py  inference_mindspore.py  inference_pytorch.py  inference_tensorflow.py  train_mindspore.py  train_pytorch.py  train_tensorflow.py  utils.py  visualization.py
tests/: conftest.py  test_datasets.py  test_inference.py  test_models_mindspore.py  test_models_pytorch.py  test_models_tensorflow.py
